--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Azhar Khalid
-logo: photo.jpg
+logo: photo_circle.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
