docs: add blog setup documentation and configure Jekyll permalinks
- Added blog section to README with instructions for creating and viewing posts
- Updated logo reference from photo_circle.png to cropped_circle.png in Jekyll config
- Configured custom permalink structure for blog posts (/blog/:year/:month/:day/:title/)
- Set default layout to 'post' for all posts in _config.yaml

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,14 @@
 title: Azhar Khalid
-logo: photo_circle.png
+logo: cropped_circle.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
+
+permalink: /blog/:year/:month/:day/:title/
+
+defaults:
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
