--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: Azhar Khalid
-logo: cropped_circle.png
+logo: /images/cropped_circle.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
